--- a/styles/scss/identity.scss
+++ b/styles/scss/identity.scss
@@ -1150,7 +1150,7 @@ $STC_and_SDSB_FULLHD_margin_horizontal: 20px;
             background-color: $bg_token_yellow;
         }
 
-        .Interrupt {
+        .React {
 
             color: $color_text_token_orange; 
             border: 1px solid $color_border_token_orange;
@@ -1199,7 +1199,7 @@ $STC_and_SDSB_FULLHD_margin_horizontal: 20px;
             background-color: $bg_token_purple2;
         }
 
-        .Assimilate {
+        .Integrate {
 
             color: $color_text_token_cyan;
             border: 1px solid $color_border_token_cyan;
