--- a/styles/css/defaults.css
+++ b/styles/css/defaults.css
@@ -7,6 +7,10 @@ gmes-defaults.css
 ──────────────────────────────────────────────────────
 TODO: Variables
 ────────────────────────────────────────────────────── */
+/* 
+$font_default: 'Times New Roman', Times, Georgia, serif;
+$font_size: 19rem; 
+ */
 /* Padrão: 600-700px. */
 /* Apple: 16px em 320w, e 22px em 736w. */
 /*  
@@ -49,7 +53,16 @@ $bg_button_type_image_piece_text_floating: hsla(192, 100%, 98%, 0.95);
 */
 /*  
 ──────────────────────────────────────────────────────
-Global Alternative Box Model
+TODO: Download Fonts
+────────────────────────────────────────────────────── */
+@font-face {
+  font-family: "Cyber-BoldBook";
+  src: url("/fonts/Cyber-BoldBook.ttf");
+}
+
+/*  
+──────────────────────────────────────────────────────
+TODO: Global New Box Model
 ────────────────────────────────────────────────────── */
 html {
   box-sizing: border-box;
@@ -160,7 +173,7 @@ p, dl, label {
 TODO: Texts
 ────────────────────────────────────────────────────── */
 html {
-  font-family: "Times New Roman", Times, Georgia, serif;
+  font-family: "Cyber-BoldBook";
   font-size: 1px;
   color: black;
 }
@@ -169,7 +182,7 @@ span, h1, h2, h3, h4, h5, h6, p, a, em, i, strong, b, u, ul, ol, li, dt, dd,
 abbr, dfn, sub, sup, pre, var, kbd, samp, code, time, address, blockquote,
 q, cite, figcaption, form, label, input, textarea, select, button, fieldset,
 legend, table, tr, td, th, caption {
-  font-size: 19rem;
+  font-size: 14rem;
 }
 
 div, header, nav, main, article, section, aside, footer {
@@ -484,7 +497,7 @@ h20 {
 }
 
 .mini_topic {
-  font-size: 19rem;
+  font-size: 14rem;
   background: 0;
   text-align: center;
   font-weight: bold;
@@ -555,7 +568,7 @@ dfn, var, address, cite {
 }
 
 var, kbd, samp, code {
-  font-family: "Times New Roman", Times, Georgia, serif;
+  font-family: "Cyber-BoldBook";
 }
 
 kbd {
@@ -578,7 +591,7 @@ pre {
 }
 
 .font_size {
-  font-size: 19rem;
+  font-size: 14rem;
 }
 
 .font_monospace {
@@ -590,7 +603,7 @@ pre {
 }
 
 .font_smaller, table caption {
-  font-size: 14rem;
+  font-size: 13rem;
 }
 
 /*
@@ -607,7 +620,7 @@ pre {
 }
 */
 .container_text {
-  font-size: 19rem;
+  font-size: 14rem;
   padding: 8px 13px 9px;
   border: 1px solid #cccccc;
   border-radius: 20px;
@@ -831,7 +844,7 @@ span.token.black {
 }
 
 .list_featured li div {
-  font-size: 19rem;
+  font-size: 14rem;
 }
 
 .list_featured li + li {
@@ -1260,7 +1273,7 @@ TODO:        >> Expanded
   right: 9px;
   z-index: 1000;
   background: url(../../images/bgs/header.png) center/100% 100%;
-  font-size: 19rem;
+  font-size: 14rem;
   box-shadow: 3px 3px 6px 0px rgba(0, 0, 0, 0.28);
   /*
     border-radius: 0px;
@@ -1399,7 +1412,7 @@ TODO:    > Footer
 
 .footer-content .copyright {
   margin-top: 0;
-  font-size: 14rem;
+  font-size: 13rem;
   text-indent: 0;
   text-align: center;
 }
@@ -4144,7 +4157,7 @@ TODO:    > Lightbox
 }
 
 .lightbox_text {
-  font-size: 19rem;
+  font-size: 14rem;
   font-weight: bold;
   filter: drop-shadow(0px 0px 2px #007899);
   line-height: 1.5;
