--- a/hi-techCore/styles/css/downloadFonts.css
+++ b/hi-techCore/styles/css/downloadFonts.css
@@ -8,5 +8,5 @@ downloadFonts.css
 
 @font-face {
   font-family: "Cyber-BoldBook";
-  src: url("/fonts/Cyber-BoldBook.ttf");
+  src: url("../../fonts/Cyber-BoldBook.ttf");
 } 
