--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -463,12 +463,12 @@ $bg_button_hide: url(../../images/icons/button_hide.png)  center /100% 100%;
 /*  
 ──────────────────────────────────────────────────────
 TODO: Download Fonts
-────────────────────────────────────────────────────── */
+──────────────────────────────────────────────────────
 
 @font-face {
     font-family: "Cyber-BoldBook";
     src: url("/fonts/Cyber-BoldBook.ttf");
-} 
+}  */
 
 /*  
 ──────────────────────────────────────────────────────
