--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -784,12 +784,12 @@ ul > li::before {
 
 
 
-ul { margin-left: calc(1 * #{$margin_horizontal} + /* 23px + 1px */ 24px); }
+ul { margin-left: calc(1 * #{$margin_horizontal} + 24px); } 
 ul { list-style-image: url("../../images/icons/list_1.svg"); }
 ul ul { list-style-image: url("../../images/icons/list_2.svg"); }
 ul ul ul { list-style-image: url("../../images/icons/list_3.svg"); }
 ul ul ul ul { list-style-image: url("../../images/icons/list_4.svg"); }
-
+/*  */
 
 ol > li::after {
     display: inline;
@@ -1091,6 +1091,8 @@ span.token.black {
         width: max-content; -moz-width: fit-content; width: -moz-fit-content; width: fit-content; /* <- Declarações necessárias 
         para garantir que o Firefox funcione como se suportasse 'width: fit-content'. (Ao menos 1 delas deve funcionar.) */
 
+        list-style-image: none;
+
         > li {
             font-weight: bold;
 
@@ -1115,6 +1117,7 @@ span.token.black {
             margin: 0 0 0 18px; 
             list-style-type: none;
             // list-style-type: "└ "; // <- Não funciona no safari.
+            list-style-image: none;
         }
 
         ol {
@@ -1163,6 +1166,7 @@ span.token.black {
 .list_featured {
 
     list-style-type: none;
+    list-style-image: none;
     margin-left: $margin_horizontal;
 
     li {
@@ -1379,6 +1383,7 @@ TODO:        >> Menu
             margin: 0;
             padding: 0;
             list-style-type: none;
+            list-style-image: none;
             background: $bg_nav;
             overflow: auto;
 
